# rauly.rs

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
nix/: module.nix  package.nix  shell.nix
src/: main.rs  utils.rs  voice.rs
src/commands/: guild.rs  math.rs  mod.rs  quotes.rs  wotd.rs
src/models/: guild.rs  mod.rs  word.rs
src/voice/: cmds.rs  disconnect_handler.rs  mod.rs
