[package]
name = "raulyrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
scraper = "0.14.0"
rand = "0.8.5"
chrono = "0.4.23"
chrono-tz = "0.8.1"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
once_cell = "1.17.1"

[dependencies.songbird]
version = "0.3.2"
features = ["builtin-queue"]

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
features = ["framework", "standard_framework", "voice"]

[dependencies.reqwest]
version = "0.11.14"
features = ["json"]
