[package]
name = "raulyrs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0.79"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
chrono = "0.4.31"
chrono-tz = "0.8.5"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
once_cell = "1.19.0"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "current"
version = "0.4.0"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.3"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12"
features = ["framework", "standard_framework", "voice"]

[dependencies.reqwest]
version = "0.11.23"
features = ["json"]
