[package]
name = "raulyrs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
chrono = "0.4"
chrono-tz = "0.10"
poise = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
once_cell = "1.20"

[dependencies.songbird]
version = "0.4.6"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.4"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.tokio]
version = "1.42.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12"
features = ["framework", "standard_framework", "voice"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]
